# arc-gui-clients

./: .readthedocs.yml  AUTHORS  CMakeLists.txt  arcproxy-ui.pro  arcstat-ui.pro  arcstorage.ui.pro  configure  submit_jobs
cmake/Modules/: FindArc.cmake  FindNSPR.cmake~  FindNSS.cmake~  FindOpenSSL.cmake
docs/: Makefile
docs/arcstorage-ui/: Makefile
docs/arcstorage-ui/source/: conf.py  introduction.rst
docs/source/: introduction.rst
docs/users_guide/source/: arcstorage-ui.rst  conf.py  index.rst  introduction.rst
images/splash_arc_storage.sketch/: fonts
macports/arc-ports/: PortIndex  PortIndex.quick
macports/globus-ports/: PortIndex
src/: CMakeLists.txt
src/arccert-ui/: CMakeLists.txt  certconvertwindow.cpp  certconvertwindow.h  certconvertwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/arcproxy-test/: CMakeLists.txt  arcproxy.cpp  arcproxy.h  arcproxy_manager.cpp  arcproxy_manager.h  arcproxy_myproxy.cpp  arcproxy_proxy.cpp  arcproxy_voms.cpp
src/arcproxy-ui/: CMakeLists.txt  arcproxy-utils.cpp  arcproxy-utils.h  main.cpp  mainwindow.cpp  mainwindow.h
src/arcstat-ui/: CMakeLists.txt  JmBase.cpp  JmBase.h  arcjobcontroller.cpp  arcjobcontroller.h  arcstat-ui.qrc  jobstatuswindow.cpp  jobstatuswindow.h  jobstatuswindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/arcstorage-ui/: CMakeLists.txt  applicationsettings.cpp  applicationsettings.ui  arcfileserver.cpp  arcfileserver.h  arcstorage-ui-resources.qrc  arcstorage.h  arcstoragewindow.cpp  arcstoragewindow.h  arcstoragewindow.ui  dragdropabletreewidget.cpp  filepropertiesdialog.h  fileserver.cpp  fileserver.h  fileserverfactory.h  filetransfer.cpp  filetransfer.h  filetransferlist.cpp  filetransferlist.h  foldercontent.h  globalstateinfo.cpp  globalstateinfo.h  localfileserver.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qdebugstream.h  renamedialog.h  srmfileserver.cpp  srmfileserver.h  storagesplash.cpp  transferlistwindow.cpp  transferlistwindow.h  transferlistwindow.ui
src/arcstorage-ui/icons/24px/: Thumbs.db
src/arcsub-ui/: CMakeLists.txt  arcsub-ui.desktop  arcsubmitcontroller.cpp  jobdefinitions.cpp  jobdefinitions.h  jobdefinitionwindow.cpp  jobdefinitionwindow.h  jobdefinitionwindow.ui  mainwindow.ui  utils.cpp  utils.h
src/common/: arc-gui-config.h  arc-gui-config.h.in  arc-gui-version.h  arcproxy-utils-functions.cpp  arcproxy-utils-functions.h  arcproxy-utils.cpp  arcproxy-utils.h  arctools.cpp  arctools.h  helpwindow.cpp  helpwindow.h  proxywindow.cpp  proxywindow.h  proxywindow.ui
tags/0_1_0/: CMakeLists.txt  submit_jobs
tags/0_1_0/images/: arcstorage_icon.pxm  certificate_image.pxm
tags/0_1_0/src/arcproxy-ui/: arcproxy-utils.cpp  infodialog.h
tags/0_1_0/src/arcstat-ui/: JmBase.cpp  arcjobcontroller.cpp  mainwindow.cpp  mainwindow.ui
tags/0_1_0/src/arcstorage-ui/: dragdropabletreewidget.cpp  filetransfer.h  ftpfileserver.h  qdebugstream.h
tags/0_1_1/: CMakeLists.txt  README  arcstorage.ui.pro  make_source_package
tags/0_1_1/src/: CMakeLists.txt
tags/0_2_0/: CMakeLists.txt  arcstorage.ui.pro
tags/0_2_1/: build_install  install
tags/0_2_1_1/: INSTALL
tags/0_2_2/: CMakeLists.txt  arcstat-ui.pro
tags/0_2_3/: CMakeLists.txt  INSTALL  arcstorage.ui.pro
tags/0_3_0/: arcstorage.ui.pro  fix_bundles
tags/0_3_1/: arccert-ui.pro
tags/0_4_0_RC1/src/arcstat-ui/: CMakeLists.txt  main.cpp
tags/0_4_0_RC1/src/arcstorage-ui/: CMakeLists.txt  applicationsettings.cpp  arcstoragewindow.cpp  arcstoragewindow.ui  filetransfer.cpp  filetransferlist.cpp  globalstateinfo.cpp  main.cpp  srmfileserver.cpp
tags/0_4_2/: AUTHORS  CMakeLists.txt
tags/0_4_4/: CMakeLists.txt  clean  rebuild
tags/0_4_4/src/arcsub-ui/: CMakeLists.txt  jobdefinitionwindow.cpp
tags/0_4_5/: README
tags/0_4_6/src/arccert-ui/: CMakeLists.txt
trunk/: AUTHORS  CMakeLists.txt  INSTALL  arcproxy-ui.pro  arcstorage.ui.pro  arcsub-ui.pro  build  build_install  configure  submit_jobs
trunk/cmake/Modules/: FindArc.cmake  FindGlib.cmake
trunk/docs/arcstorage-ui/: make.bat
trunk/docs/arcstorage-ui/source/: index.rst
trunk/docs/source/: arcstorage-ui.rst  index.rst
trunk/docs/users_guide/: make.bat
trunk/docs/users_guide/source/: arcstorage-ui.rst  conf.py
trunk/images/: arcstat_icon.icns
trunk/images/splash_arc_storage.sketch/: Data
trunk/macports/arc-ports/net/arc-gui-clients/: Portfile
trunk/macports/arc-ports/net/nordugrid-arc-client/files/: patch-fix-arc_lcas.diff  patch-fix-arc_lcmaps.diff
trunk/macports/globus-ports/: PortIndex.quick
trunk/src/: CMakeLists.txt
trunk/src/arccert-ui/: CMakeLists.txt  certconvertwindow.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
trunk/src/arcproxy-ui/: CMakeLists.txt  arcproxy-utils.cpp  main.cpp  mainwindow.cpp  mainwindow.ui
trunk/src/arcstat-ui/: CMakeLists.txt  JmBase.h  arcjobcontroller.cpp  arcjobcontroller.h  arcstat-ui.qrc  jobstatuswindow.cpp  mainwindow.h
trunk/src/arcstorage-ui/: CMakeLists.txt  arcfileserver.cpp  arcstorage-ui-resources.qrc  arcstorage.h  arcstoragewindow.cpp  arcstoragewindow.h  arcstoragewindow.ui  atreewidgetitem.h  dragdropabletreewidget.cpp  dragdropabletreewidget.h  filepropertyinspector.ui  fileserver.h  fileserverfactory.cpp  filetransfer.cpp  filetransfer.h  filetransferlist.cpp  filetransferlist.h  foldercontent.cpp  ftpfileserver.cpp  ftpfileserver.h  globalstateinfo.cpp  globalstateinfo.h  localfileserver.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  srmfileserver.cpp  srmfileserver.h  srmsettingsdialog.cpp  srmsettingsdialog.ui  transferlistwindow.cpp  transferlistwindow.h  transferlistwindow.ui
trunk/src/arcsub-ui/: CMakeLists.txt  arcsubmitcontroller.cpp  arcsubmitcontroller.h  jobdefinitions.cpp  jobdefinitions.h  jobdefinitionwindow.cpp  jobdefinitionwindow.h  jobdefinitionwindow.ui  main.cpp  utils.cpp  utils.h
trunk/src/common/: arc-gui-config.h.in  arcproxy-utils-functions.cpp  arcproxy-utils.cpp  arcproxy-utils.h  arctools.cpp  arctools.h  helpwindow.cpp  helpwindow.h  infodialog.ui  proxywindow.cpp  proxywindow.h  proxywindow.ui
(+202 files in other folders)
